--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
+
+      - name: Install pnpm
+        run: npm i -g pnpm
+
       - name: Install dependencies
         run: pnpm ci
 
