fix typo ci for install in action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm i -g pnpm
 
       - name: Install dependencies
-        run: pnpm ci
+        run: pnpm install
 
       - name: Build Astro
         run: pnpm run build
