--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "astro": "^2.0.2",
     "astro-icon": "^0.8.0",
     "react": "^18.2.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.43.0",
+    "react-tag-input": "6.8.1",
     "tailwindcss": "^3.2.4"
   }
 }
