--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.10",
     "astro": "^2.0.2",
     "astro-icon": "^0.8.0",
+    "canvas-confetti": "^1.6.0",
     "react": "^18.2.0",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
